--- a/WebApp/Views/Appointment/Index.cshtml
+++ b/WebApp/Views/Appointment/Index.cshtml
@@ -387,12 +387,12 @@
                     var tablehtml = "";
                     $.each(response.Object, function (item) {
 
-                        var tolocalTime = converttoLocal(response.Object[item]);
-
-                        var flag = compareDateTime(fetchdate.trim(), tolocalTime);
+                        //var tolocalTime = converttoLocal(response.Object[item]);
+                       
+                        var flag = compareDateTime(fetchdate.trim(), response.Object[item]);
                         if (flag) {
 
-                            tablehtml = tablehtml + " <li><button id ='" + converttoLocal(response.Object[item]) + "' type='button' class='btn btn-primary' onclick='setDateTime(\"" + converttoLocal(response.Object[item]) + "\",\"" + fetchdate + "\")' style='width:85px'>" + converttoLocal(response.Object[item]) + "</button></li>";
+                            tablehtml = tablehtml + " <li><button id ='" + response.Object[item] + "' type='button' class='btn btn-primary' onclick='setDateTime(\"" + response.Object[item] + "\",\"" + fetchdate + "\")' style='width:85px'>" + response.Object[item] + "</button></li>";
                         }
 
 
@@ -469,12 +469,11 @@
                 else {
                     var tablehtml = "";
                     $.each(response.Object, function (item) {
-                        var tolocalTime = converttoLocal(response.Object[item]);
-
-                        var flag = compareTime(tolocalTime);
+                        //var tolocalTime = converttoLocal(response.Object[item]);
+                        var flag = compareTime(response.Object[item]);
                         if (flag) {
 
-                            tablehtml = tablehtml + " <li><button id ='" + converttoLocal(response.Object[item]) + "' type='button' class='btn btn-primary' onclick='setDateTime(\"" + converttoLocal(response.Object[item]) + "\",\"" + $("#fetchdate").val() + "\")' style='width:85px'>" + converttoLocal(response.Object[item]) + "</button></li>";
+                            tablehtml = tablehtml + " <li><button id ='" + response.Object[item] + "' type='button' class='btn btn-primary' onclick='setDateTime(\"" + response.Object[item] + "\",\"" + $("#fetchdate").val() + "\")' style='width:85px'>" + response.Object[item] + "</button></li>";
                         }
                     });
 
