forgot password api and appointment sorting

--- a/WebApp/Views/Appointment/PartialReschedule.cshtml
+++ b/WebApp/Views/Appointment/PartialReschedule.cshtml
@@ -88,6 +88,7 @@ else
         
         $('#rescheduledatatable').DataTable({
             "bAutoWidth": false, // Disable the auto width calculation 
+            "ordering": false,
             "aoColumns": [
              { "sWidth": "15%" },  
              { "sWidth": "15%" }, 
