--- a/WebApp/Views/Appointment/PartialUpcoming.cshtml
+++ b/WebApp/Views/Appointment/PartialUpcoming.cshtml
@@ -77,6 +77,7 @@ else
           //$('#datatableupcoming').DataTable();
           $('#datatableupcoming').DataTable({
               "bAutoWidth": false, // Disable the auto width calculation 
+              "ordering": false,
               "aoColumns": [
                { "sWidth": "15%" },  
                { "sWidth": "15%" }, 
