--- a/WebApp/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/WebApp/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -16,6 +16,8 @@
                 <h1>Forgot Password</h1>
                 @Html.ValidationSummary("", new { @class = "text-danger" })
                 <p class="text-danger">@ViewBag.ErrorMessage</p>
+                if (ViewBag.ErrorMessage == null)
+                {
                 <div>
                     @Html.DisplayFor(m=>m.SecretQuestion)
 
@@ -24,15 +26,17 @@
 
 
                 </div>
+               
+                    <div>
+                        @Html.TextBoxFor(m => m.SecretAnswer, new { @class = "form-control", @placeholder = "Secret Answer" })
+                    </div>
 
-                <div>
-                    @Html.TextBoxFor(m => m.SecretAnswer, new { @class = "form-control", @placeholder = "Secret Answer" })
-                </div>
-                
-                <div>
+                    <div>
                         <input type="submit" class="btn btn-primary submit" value="Submit" />
-                </div>
-                    
+                    </div>
+                }
+
+
             }
 
 
