--- a/WebApp/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/WebApp/Views/Account/ResetPasswordConfirmation.cshtml
@@ -8,6 +8,7 @@
 </hgroup>
 <div>
     <p>
-        Your password has been reset. Please follow instructions from your email. Please @Html.ActionLink("click here to log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
+        Your password has been reset. Please follow instructions from your email to login.
+        @*Your password has been reset. Please follow instructions from your email. Please @Html.ActionLink("click here to log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })*@
     </p>
 </div>
