--- a/WebApp/Views/Appointment/PartialPending.cshtml
+++ b/WebApp/Views/Appointment/PartialPending.cshtml
@@ -88,6 +88,7 @@ else
        // $('#datatablepending').dataTable();
         $('#datatablepending').DataTable({
             "bAutoWidth": false, // Disable the auto width calculation 
+            "ordering": false,
             "aoColumns": [
              { "sWidth": "15%" },  
              { "sWidth": "15%" }, 
