--- a/WebApp/Views/DoctorAppointment/PartialDoctorPending.cshtml
+++ b/WebApp/Views/DoctorAppointment/PartialDoctorPending.cshtml
@@ -80,7 +80,10 @@ else
 <script>
     $(document).ready(function() {
 
-        $('#pendingdatatable').dataTable();
+        $('#pendingdatatable').dataTable(
+            {
+                "ordering": false
+            });
         $('#datatable-keytable').DataTable({
             keys: true
         });
