base64 issye resolved

--- a/WebApp/Views/SeeDoctor/MyCareTeamView.cshtml
+++ b/WebApp/Views/SeeDoctor/MyCareTeamView.cshtml
@@ -26,7 +26,7 @@ else
             <a class="hrt" href="#" style="color: #5A738E;"><span id="@(item.doctorID + "nofavv")" class="fa fa-heart-o" onclick=ttogglefav("@item.doctorID","@SessionHandler.UserInfo.Id"); style="display:none"></span></a>
             <a class="hrt" href="#" style="color: #5A738E;"><span id="@(item.doctorID + "favv")" class="fa fa-heart" onclick=uuntogglefav("@item.doctorID","@SessionHandler.UserInfo.Id"); style="display:block"></span></a>
             <i class="crl fa fa-circle clsAvailableSpot" aria-hidden="true" style="color: red; cursor: pointer;font-size: 12px; position:absolute; right:2%;"></i>
-            <img style="width:126px;height:126px;margin: 0 auto;display: inline-block;" src="@(item.ProfilePhotoBase64)" alt="" class="img-circle img-responsive m-b-10 m-t-0" style="margin: 0 auto;display: inline-block;">
+            <img style="width:126px;height:126px;margin: 0 auto;display: inline-block;" src='../Pictures/D_@(item.doctorID).png' alt="" class="img-circle img-responsive m-b-10 m-t-0" style="margin: 0 auto;display: inline-block;">
             <h2 class="m-0">
 
                 <a href="" onclick='showProfile(@item.doctorID)' class="thumbnail-col-inner m-b-15" data-toggle="modal" data-target="#myModal8" style="word-wrap: break-word;font-size: 12px">
