--- a/WebApp/Views/PatientProfile/Index.cshtml
+++ b/WebApp/Views/PatientProfile/Index.cshtml
@@ -124,7 +124,7 @@
                                                 <span id="spnErrorGender" style="display:none; color:red; float:right;">Gender is required</span>
                                                 <div class="">
                                                     @Html.DropDownListFor(x => x.Gender,
-                                                       new List<SelectListItem> { new SelectListItem { Text = "Male", Value = "Male" }, new SelectListItem { Text = "Female", Value = "Female" } },
+                                                       new List<SelectListItem> { new SelectListItem { Text = "Select", Value = "" }, new SelectListItem { Text = "Male", Value = "Male" }, new SelectListItem { Text = "Female", Value = "Female" } },
                                                        new { @class = "form-control" }
                                                        )
                                                 </div>
@@ -227,7 +227,8 @@
                                                     City<span class="required">*</span>
                                                 </label>
                                                 <div class="">
-                                                    @Html.DropDownListFor(x => x.City, (List<SelectListItem>)ViewBag.drpdnCity, new { @class = "form-control" })
+
+                                                    @Html.DropDownListFor(x => x.City, (List<SelectListItem>)ViewBag.drpdnCity,"Select", new { @class = "form-control" })
                                                 </div>
                                             </div>
                                         </div>
@@ -240,7 +241,7 @@
                                                 </label>
                                                 <span id="spnErrorState" style="display:none; color:red; float:right;">State is required</span>
                                                 <div class="">
-                                                    @Html.DropDownListFor(x => x.State, (List<SelectListItem>)ViewBag.drpdnState, new { @class = "form-control" })
+                                                    @Html.DropDownListFor(x => x.State, (List<SelectListItem>)ViewBag.drpdnState,"Select", new { @class = "form-control" })
                                                 </div>
                                             </div>
                                         </div>
