--- a/WebApp/Views/SeeDoctor/SeeDoctor.cshtml
+++ b/WebApp/Views/SeeDoctor/SeeDoctor.cshtml
@@ -403,7 +403,7 @@
                                     </tr>
                                 </table>
                             </form>
-                            <p>Only .pdf, .txt, .png, .jpg and .csv formats are allowed</p>
+                            <p>Only .png & .jpg formats are allowed</p>
                         </div>
                         <br>
 
